# CactRie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fast-cloc.sh  report.md
cact-front-end/: CMakeLists.txt  parser-codegen.sh
cact-front-end/autogen/src/: CactLexer.cpp  CactParser.cpp  CactParserBaseVisitor.cpp  CactParserVisitor.cpp
cact-front-end/grammar/: CactLexer.g4  CactParser.g4
cact-front-end/include/cact-front-end/: cact-base-visitor.h  cact-constant-variable.h  cact-expr.h  cact-functions.h  cact-operator-declaration.h  cact-operator.h  cact-parser-context.h  cact-syntax-error-listener.h  cact-type.h  cact-typedef.h  cact-variable.h  ir-generator.h  (+6 more)
cact-front-end/src/: cact-expr.cc  cact-frontend.cc  cact-operator.cc  cact-semantic-analysis.cc  cact-syntax-error-listener.cc  ir-generator.cc
cact-parser/: .gitignore  CMakeLists.txt  parser-codegen.sh
cact-parser/autogen/include/cact-parser/: CactLexer.h  CactParser.h  CactParserBaseVisitor.h  CactParserVisitor.h
cact-parser/autogen/src/: CactLexer.cpp  CactParser.cpp  CactParserBaseVisitor.cpp  CactParserVisitor.cpp
cact-parser/grammar/: CactLexer.g4  CactLexer.interp  CactLexer.tokens  CactParser.g4  CactParser.interp
cact-parser/include/cact-parser/: cact-expr.h  cact-functions.h  cact-operator.h  cact-syntax-error-listener.h  cact-type.h  cact-variable.h  symbol-registration-visitor.h  symbol-registry.h  type-check-and-const-eval.h
cact-parser/include/cact-parser/mystl/: observer_ptr.h
cact-parser/src/: cact-syntax-error-listener.cc
cact-rie/: CMakeLists.txt
cact-rie/apps/: cact-rie.cc
cact-rie/include/cact-rie/: dummy.h  ir-generator.h
cact-rie/src/: dummy.cc
cact-rie/tests/: cact-rie-tests.cc  llvm-ir-gen-tests.py
cact-rie/tests/samples_lex_and_syntax/: 00_true_main.cact
cact-rie/tests/samples_semantic/: 39_true_complex_control_flow.cact  40_true_a_lot_of_whiles.cact  41_true_short_circuit.cact
cact-rie/tests/temp/: 00_true_use_after_decl-std.ll  00_true_use_after_decl.ll  04_true_while_same_name-std.ll  04_true_while_same_name.ll  08_true_int_init-std.ll  08_true_int_init.ll  11_true_unaop-std.ll  11_true_unaop.ll  14_true_assignment-std.ll  14_true_assignment.ll  17_true_simple_if_else-std.ll  17_true_simple_if_else.ll  20_true_builtin_func.ll  22_true_no_arg_func-std.ll  22_true_no_arg_func.ll  26_true_void_func_stmt-std.ll  26_true_void_func_stmt.ll  32_true_int_float_init-std.ll  32_true_int_float_init.ll  34_true_multidim_init-std.ll  34_true_multidim_init.ll  35_true_float_multidim_call-std.ll  35_true_float_multidim_call.ll  38_true_same_name.ll  39_true_complex_control_flow-std.ll  39_true_complex_control_flow.ll  40_true_a_lot_of_whiles-std.ll  40_true_a_lot_of_whiles.ll  41_true_short_circuit-std.ll  41_true_short_circuit.ll
chiisai-llvm/: CMakeLists.txt  parser-codegen.sh
chiisai-llvm/apps/: chs-lli.cc  dot-cfg.cc  dot-use-def.cc  run-pass.cc  rv32i.cc  rv64i.cc
chiisai-llvm/grammar/: LLVMLexer.g4  LLVMLexer.tokens  LLVMParser.g4
chiisai-llvm/include/: address.h
chiisai-llvm/include/chiisai-llvm/: address.h  alloca-instruction.h  argument.h  array-type.h  basic-block.h  constant-array.h  constant-pool.h  constant-scalar.h  constant.h  data-flow-analysis.h  dominator-tree.h  executor.h  function-type.h  function.h  global-variable.h  inst-transformer.h  instruction.h  instructions.h  integer-type.h  ir-builder.h  literal.h  llvm-context.h  llvm-ir.h  module-builder.h  module-parser-visitor.h  module-parser.h  module.h  pass.h  pointer-type.h  predicate.h  properties.h  ref.h  type-system.h  type.h  user.h  value.h  virtual-machine.h  virtual-memory.h
chiisai-llvm/include/chiisai-llvm/autogen/: LLVMLexer.h  LLVMParser.h  LLVMParserBaseVisitor.h  LLVMParserVisitor.h
chiisai-llvm/include/chiisai-llvm/backend/: riscv-backend.h
chiisai-llvm/include/chiisai-llvm/backend/riscv/: assembly-generator.h  liveness-analysis.h  pseudo-inst-translator.h  pseudo-inst.h  riscv-backend-metadata.h  riscv-backend.h  riscv-reg-alloc.h  stack-frame.h  utils.h
chiisai-llvm/include/chiisai-llvm/backend/riscv/passes/: func-abi-info.h  liveness-analysis.h  register-weight-estimation.h
chiisai-llvm/include/chiisai-llvm/mystl/: castings.h  hash.h  lambda.h  manager_vector.h  not_null.h  observer_ptr.h  poly_list.h  poly_vector.h  zip.h
chiisai-llvm/include/chiisai-llvm/passes/: const-prop-pass.h  dce-pass.h  dot-cfg-pass.h  floating-use-analysis.h  function-global-access-analysis.h  global-access-localization-pass.h  loop-analysis.h  mem2reg-pass.h  pure-function-analysis.h  single-jump-elimination-pass.h  strength-reduction-pass.h  useless-arith-elimination.h
chiisai-llvm/src/: basic-block.cc  data-flow-analysis.cc  dominator-tree.cc  executor.cc  function.cc  inst-transformer.cc  instruction.cc  instructions.cc  ir-builder.cc  llvm-context.cc  llvm-parser.cc  module-builder.cc  module-parser-visitor.cc  module.cc  predicate.cc  type.cc  user.cc  value.cc
chiisai-llvm/src/autogen/: LLVMLexer.cpp  LLVMParser.cpp  LLVMParserBaseVisitor.cpp  LLVMParserVisitor.cpp
chiisai-llvm/src/backend/riscv/: assembly-generator.cc  pseudo-inst-translator.cc  riscv-backend-metadata.cc  riscv-backend.cc  riscv-reg-alloc.cc  stack-frame.cc
chiisai-llvm/src/backend/riscv/passes/: func-abi-info.cc  liveness-analysis.cc  register-weight-estimation.cc
chiisai-llvm/src/passes/: const-prop-pass.cc  floating-use-analysis.cc  global-access-renaming-pass.cc  loop-analysis.cc  mem2reg-pass.cc  pure-function-analysis.cc  strength-reduction-pass.cc  useless-arith-elimination.cc
chiisai-llvm/tests/: test-dom-tree.cc  test-type-to-string.cc  test_manager_vector.cc  test_poly_vector.cc
doc/: front_end_design.md
mini-llvm/: CMakeLists.txt
mini-llvm/src/: llvm-parser.cc
mystl/: CMakeLists.txt
mystl/include/mystl/: bit_vector.h  castings.h  hash.h  lru_cache.h  manager_vector.h  not_null.h  observer_ptr.h  poly_list.h  poly_vector.h  poly_view_list.h  ref_counted.h  zip.h
mystl/tests/: test_manager_vector.cc  test_poly_list.cc  test_poly_vector.cc  test_ref_counted.cc
(+12 files in other folders)
